# fbnotify

./: .gitignore  alembic.ini  logging.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 08a90d9c6eaa_.py  3d7d3bde4dad_.py
fbnotify/: config.py  database.py  facebook.py  main.py  telegram.py  utils.py
fbnotify/facebook/: client.py  exceptions.py  service.py
fbnotify/telegram/: bot.py  exceptions.py  service.py
